--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -25,17 +25,17 @@
 			},
 			"detail": "compiler: C:\\msys64\\mingw64\\bin\\g++.exe"
 		},
-		{
-			"type": "shell",
-			"label": "Run Program: g++.exe ",
-			"command": "C:\\msys64\\mingw64\\bin\\g++.exe -g3 -Wall \"${file}\" -o \"${fileDirname}\\${fileBasenameNoExtension}.exe\" ;\"${fileDirname}\\${fileBasenameNoExtension}.exe\"",
-			"options": {
-				"cwd": "C:\\msys64\\mingw64\\bin"
-			},
-			"problemMatcher": [
-				"$gcc"
-			],
-			"detail": "compiler: C:\\msys64\\mingw64\\bin\\g++.exe"
-		}
+		// {
+		// 	"type": "shell",
+		// 	"label": "Run Program: g++.exe ",
+		// 	"command": "C:\\msys64\\mingw64\\bin\\g++.exe -g3 -Wall \"${file}\" -o \"${fileDirname}\\${fileBasenameNoExtension}.exe\" ;\"${fileDirname}\\${fileBasenameNoExtension}.exe\"",
+		// 	"options": {
+		// 		"cwd": "C:\\msys64\\mingw64\\bin"
+		// 	},
+		// 	"problemMatcher": [
+		// 		"$gcc"
+		// 	],
+		// 	"detail": "compiler: C:\\msys64\\mingw64\\bin\\g++.exe"
+		// }
 	]
 }
